syntax = "proto3";

option go_package = "github.com/dbuschman7/config-service/config";

package config;

service ConfigService {
     rpc GetFeatureConfig(Application) returns (FeatureConfig) {}
}


message Application {
    string name = 1;
    string feature = 2;
}

message FeatureConfig { 
   bool enabled = 1;
   int32 maxFoo = 2; 
   string prefixBar = 3; 
}